# KRAI-Insights

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  todo.md  todo_security.md
.github/workflows/: ci.yml
.streamlit/: config.toml
config/: business_rules.example.yaml  contract_pricing.example.yaml  customer_mapping.example.yaml  technicians.yaml.example  warranty_rules.example.yaml
db/migrations/: 001_init_schema.sql  002_devices_unified.sql  003_device_registry_views.sql  004_vbm_lifecycle.sql  005_vbm_coverage_precision.sql  006_fix_toner_yield_view.sql  007_vw_premature_failures.sql  008_model_backfill_view.sql  011_error_code_ref.sql  (+63 more)
docs/: README.md  agent_routes.md  betrieb_sicherheit.md  datenqualitaet.md  datenquellen.md  deckung.md  deployment.md  fleetmgmt_reimport_verification_20260522.md  fleetmgmt_restore_verification_20260521.md  garantie.md  geraete_verbrauchsmaterial.md  kennzahlen.md  observability.md  radix_api_comparison.md  service.md  sla.md  systemueberblick_2026-05-26.md  vbm_crawler_integration.md
insights/: __init__.py
scripts/: backup_insights_db.py  cf_access_setup.py  diff_fleetmgmt_counts.py  env_check.py  fix_sla_views.py  fleetmgmt_full_reimport.ps1  migrate.py  pii_schema_scan.py  radix_login_check.py  repseudonymize_notes.py  seed_technicians.py  verify_fleetmgmt_restore.sql
tests/: test_config.py  test_llm_client.py  test_pii.py  test_radix_auth.py  test_warranty_invariants.py
(+69 files in other folders)
